--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -25,8 +27,10 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "typescript": "^5"
