--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
     "jose": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.4",
@@ -19,11 +20,13 @@
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
